# llm-log-viewer

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  generate_icns.sh  specification.md
.github/workflows/: release.yml
assets/: icon.icns
samples/: sample.json  sample.jsonl  sample2.jsonl
src/: main.rs
