[package]
name = "llm_log_viewer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.27", default-features = true, features = ["glow"] }
egui = "0.27"
egui_extras = { version = "0.27" }
egui_commonmark = "0.16"
rfd = "0.14"

# arboard is optional; using egui clipboard by default.
# arboard = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
